work on fixing tests